fix spacing on portfolio page

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -43,7 +43,7 @@ body {
   text-decoration: none;
   padding: .5em;
   color: white;
-  justify-content: flex-end;
+  /*justify-content: flex-end;*/
 }
 
 .nav-link:hover {
@@ -53,23 +53,29 @@ body {
 
 .portfolio {
   margin: 5%;
-  /*display:flex;*/
-  /*flex-basis: 100%;*/
   color: black;
+
+}
+
+.portfolio h3{
+  text-align: center;
 }
 
 .project{
-  width: 250px;
+  flex-direction:column;
+  width: 100%;
 }
 
 .portfolio-image{
    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-   width: 250px;
+   width: 90%;
 }
 
 .about-page{
   margin: 5%;
+  display:flex;
   text-align: left;
+  flex-direction: column;
 }
 
 .unicorn {
@@ -123,25 +129,29 @@ footer {
   }
 
   .logo {
+    font-size: 24px;
     padding: 20px;
   }
 
   .nav-link {
     font-size: 24px;
+    padding: 20px;
 
   }
 
   .project {
-    width: 550px;
+    width: 90%;
+
   }
 
   .portfolio-image {
-    width: 550px;
+    width: 100%;
   }
 
   .about-page{
     display:flex;
     flex-basis: 100%;
+    flex-direction: row;
   }
 
   .unicorn {
@@ -183,48 +193,23 @@ footer {
     }
 
     .splash {
-      font-size: 3em;
-    }
-
-    .logo {
-      padding: 20px;
-    }
-
-    .nav-link {
-      font-size: 24px;
-
-    }
-
-    .nav-link:hover {
-      text-decoration: underline;
-      color: #0D6F7F;
+      font-size: 2em;
     }
 
     .portfolio {
       display: flex;
       justify-content: space-between;
     }
-    .project {
-      width: 400px;
-    }
 
-    .portfolio-image {
-    justify-content: space-between;
-    width: 400px;
-
-    }
-
-    .section {
-    display: flex;
+    .project{
+      width: 30%;
     }
 
     .about-page{
       display:flex;
       flex-basis: 100%;
       margin: 5%;
-
       text-align: left;
-
     }
 
     .unicorn {
